Avoid segfault when doing IPA-VRP but not IPA-CP (PR 93015)

2019-12-21  Martin Jambor  <mjambor@suse.cz>

	PR ipa/93015
	* ipa-cp.c (ipcp_store_vr_results): Check that info exists

	testsuite/
	* gcc.dg/lto/pr93015_0.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@279695 138bc75d-0d04-0410-961f-82ee72b054a4